--- a/src/app/theme/components/baContentTop/baContentTop.html
+++ b/src/app/theme/components/baContentTop/baContentTop.html
@@ -1,8 +1,3 @@
 <div class="content-top clearfix">
-  <h1 class="al-title">{{ activePageTitle }}</h1>
-
-  <ul class="breadcrumb al-breadcrumb">
-    <li class="breadcrumb-item"><a routerLink="/pages/dashboard">Home</a></li>
-    <li class="breadcrumb-item active">{{ activePageTitle }}</li>
-  </ul>
+  <h1 class="al-title"> Dallas Downtown S. Akard Location </h1>
 </div>
