--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -3,7 +3,7 @@
     <h1>Sign up to ng2-admin</h1>
     <a routerLink="/login" class="auth-link">Already have an ng2-admin account? Sign in!</a>
 
-    <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)" class="form-horizontal">
+    <form [formGroup]="form" (ngSubmit)="onSubmit(form.value, $event)" class="form-horizontal">
       <div class="form-group row" [ngClass]="{'has-error': (!name.valid && name.touched), 'has-success': (name.valid && name.touched)}">
         <label for="inputName3" class="col-sm-2 control-label">Name</label>
 
